Changed gatsby backend

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,7 @@
 backend:
-  name: test-repo
+  name: github
+  repo: arig4m3r/pizzaria-gatsby
+  branch: main
 
 media_folder: static/assets
 public_folder: /assets
@@ -12,8 +14,28 @@ collections:
     fields:
       - { name: name, label: Nome }
       - { name: picture, label: Foto, widget: "image" }
-      - { name: value_b, label: Valor Broto, widget: "number", value_type: "float"}
-      - { name: value_p, label: Valor Pequena, widget: "number", value_type: "float"}
-      - { name: value_m, label: Valor Media, widget: "number", value_type: "float"}
-      - { name: value_f, label: Valor Familia, widget: "number", value_type: "float"}
+      - {
+          name: value_b,
+          label: Valor Broto,
+          widget: "number",
+          value_type: "float",
+        }
+      - {
+          name: value_p,
+          label: Valor Pequena,
+          widget: "number",
+          value_type: "float",
+        }
+      - {
+          name: value_m,
+          label: Valor Media,
+          widget: "number",
+          value_type: "float",
+        }
+      - {
+          name: value_f,
+          label: Valor Familia,
+          widget: "number",
+          value_type: "float",
+        }
       - { name: description, label: Descrição }
