Added Slug Hidden

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,6 +15,7 @@ collections:
     slug: "{{slug}}"
     fields:
       - { name: name, label: Nome }
+      - { name: "titleslug", widget: "hidden", default: "{{slug}}" }
       - { name: picture, label: Foto, widget: "image" }
       - {
           name: value_b,
